k8s/Deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-satc
  namespace: ##K8S_NAMESPACE##
  labels:
    app: app-satc
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: app-satc
  template:
    metadata:
      labels:
        app: app-satc
    spec:
      containers:
      - name: app-satc
        image: docker.io/##DOCKER_USERNAME##/satc-devops:##K8S_TAG##
        ports:
        - containerPort: 4173
          name: http
        resources:
          requests:
            cpu: "100m"
            memory: "182Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /health
            port: 4173
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: app-satc
  namespace: ##K8S_NAMESPACE##
  labels:
    app: app-satc
spec:
  type: ClusterIP
  selector:
    app: app-satc
  ports:
  - port: 80
    targetPort: 4173
    name: http
    protocol: TCP
---
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-satc
  namespace: ##K8S_NAMESPACE##
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: ##DOCKER_USERNAME##.app.devops-satc.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-satc
            port:
              number: 80
